--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"tw-elements": "^1.0.0-alpha13"
 	},
 	"devDependencies": {
-		"postcss-cli": "^10.0.0"
+		"postcss-cli": "^10.0.0",
+		"prettier": "^2.8.3",
+		"prettier-plugin-tailwindcss": "^0.2.2"
 	}
 }
