--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "devcss": "postcss src/css/tailwind.css -o public/css/style.css -w",
-    "dev": " nodemon index.js"
+    "dev": " nodemon index.js",
+    "build": "postcss src/css/tailwind.css -o public/css/style.css"
   },
   "keywords": [],
   "author": "",
@@ -17,10 +18,10 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.5",
-    "tw-elements": "^1.0.0-alpha13"
+    "tailwindcss": "^3.1.5"
   },
   "devDependencies": {
+    "daisyui": "^2.51.3",
     "postcss-cli": "^10.0.0",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.3"
